@@ -1,53 +1,0 @@
-#!/bin/sh
-#
-# uoproxy       Start the uoproxy server
-#
-# Author:	Max Kellermann <max@duempel.org>
-#
-### BEGIN INIT INFO
-# Provides:          uoproxy
-# Required-Start:    $local_fs $remote_fs $network
-# Required-Stop:     $local_fs $remote_fs $network
-# Default-Start:     2 3 4 5
-# Default-Stop:	     0 1 6
-# Description: Ultima Online proxy server
-# short-description: UO proxy
-### END INIT INFO
-
-#includes lsb functions 
-. /lib/lsb/init-functions
-
-DESC="Ultima Online proxy"
-NAME=uoproxy
-DAEMON=/usr/sbin/$NAME
-PIDFILE=/var/run/$NAME.pid
-SCRIPTNAME=/etc/init.d/$NAME
-
-# Gracefully exit if the package has been removed.
-test -x $DAEMON || exit 0
-
-case "$1" in
-    start)
-        log_begin_msg "Starting $DESC..."
-        start_daemon -p "$PIDFILE" -- $DAEMON
-        log_end_msg $?
-	;;
-    stop)
-        log_begin_msg "Stopping $DESC..."
-        killproc -p "$PIDFILE" $DAEMON
-        log_end_msg $?
-	;;
-    force-reload)
-        $0 restart
-        ;;
-    restart)
-        $0 stop
-        $0 start
-        ;;
-    *)
-	log-action-msg "Usage: $SCRIPTNAME {start|stop|restart|force-reload}"
-	exit 1
-	;;
-esac
-
-exit 0
