@@ -1,0 +1,1 @@
+option('systemd', type: 'feature', description: 'systemd support')
